# Bridge_Bot

./: .gitignore  .gitmodules  CMakeLists.txt  doxygenConfig
Bot/: CMakeLists.txt
Bot/source/: CMakeLists.txt  main.cpp
Bot/src/: CMakeLists.txt
Bot/ut/: CMakeLists.txt  tempTest.cpp
GameEngine/: CMakeLists.txt
GameEngine/inc/: GameManager.hpp
GameEngine/include/GameEngine/: CardsUtils.hpp  Game.hpp  GameManager.hpp  Player.hpp
GameEngine/source/: CMakeLists.txt  Game.cpp  GameManager.cpp  Player.cpp  main.cpp
GameEngine/src/: CMakeLists.txt  main.cpp
GameEngine/ut/: CMakeLists.txt  testGameManager.cpp  utPlayer.cpp
HumanPlayer/: CMakeLists.txt
HumanPlayer/include/HumanPlayer/: HumanPlayer.hpp
HumanPlayer/source/: CMakeLists.txt  HumanPlayer.cpp  main.cpp
HumanPlayer/src/: CMakeLists.txt  main.cpp
HumanPlayer/ut/: CMakeLists.txt  tempTest.cpp
bot/: CMakeLists.txt
bot/source/: main.cpp
bot/ut/: CMakeLists.txt
common/: CMakeLists.txt
common/commands/: CMakeLists.txt  MultiThreadCommandContainer.hpp  QueueContainer.hpp
common/commands/include/commands/: QueueContainer.hpp
common/commands/source/: CMakeLists.txt  QueueContainer.cpp
common/commands/ut/: CMakeLists.txt
common/connection/: CMakeLists.txt  SocketClient.hpp  TcpClient.hpp
common/connection/include/connection/: TcpClient.hpp  TcpServer.hpp
common/connection/source/: CMakeLists.txt  TcpClient.cpp  TcpServer.cpp
common/connection/ut/: CMakeLists.txt
common/utils/: CMakeLists.txt
common/utils/include/utils/: Bid.hpp  Card.hpp  dummyUtil.hpp
common/utils/source/: CMakeLists.txt  Card.cpp
common/utils/ut/: CMakeLists.txt  bidTest.cpp  cardsTest.cpp  dummyTest.cpp
experiments/: CMakeLists.txt
experiments/client/: CMakeLists.txt  client.cpp
experiments/list/: CMakeLists.txt  main.cpp
experiments/server/: CMakeLists.txt  server.cpp
experiments/tcpClientTests/: CMakeLists.txt  main.cpp
experiments/tcpServerTests/: CMakeLists.txt  main.cpp
game_engine/: CMakeLists.txt
game_engine/source/: main.cpp
game_engine/ut/: CMakeLists.txt  utCardsUtils.cpp
libs/: CMakeLists.txt
libs/bot/: CMakeLists.txt
libs/bot/include/bot/: Bot.hpp
libs/bot/include/bot/bot_utils/: GameState.hpp  GlobalGameState.hpp
libs/bot/include/bot/evaluator/: Evaluator.hpp
libs/bot/source/: Bot.cpp  CMakeLists.txt
libs/bot/source/moves_optimizations/: MergeSuccessingCards.cpp
libs/bot/ut/: CMakeLists.txt
libs/bot_lib/: CMakeLists.txt
libs/bot_lib/include/bot_lib/: Bot.hpp
libs/bot_lib/include/bot_lib/bid_evaluator/: BaseBidEvaluator.hpp  BidEvaluator.hpp
libs/bot_lib/include/bot_lib/bot_utils/: GameState.hpp  GlobalGameState.hpp  Move.hpp  MovesGenerator.hpp
libs/bot_lib/include/bot_lib/moves_optimizations/: MergeRepeatingCards.hpp  MergeSuccessingCards.hpp  MoveOptimizer.hpp
libs/bot_lib/include/bot_lib/state_evaluator/: BaseEvaluator.hpp  Evaluator.hpp
libs/bot_lib/source/: Bot.cpp  CMakeLists.txt
libs/bot_lib/source/bid_evaluator/: BaseBidEvaluator.cpp  BidEvaluator.cpp
libs/bot_lib/source/bot_utils/: GameState.cpp  GlobalGameState.cpp  Move.cpp  MovesGenerator.cpp
libs/bot_lib/source/moves_optimizations/: MergeRepeatingCards.cpp  MergeSuccessingCards.cpp
libs/bot_lib/source/state_evaluator/: BaseEvaluator.cpp
libs/bot_lib/ut/: CMakeLists.txt  testBot.cpp  testMoveGenerator.cpp  testMoveOptimizers.cpp  testStateEvaluator.cpp
libs/commands/include/commands/: CommandCreator.hpp  CommandsUtils.hpp  MultiThreadCommandContainer.hpp  QueueContainer.hpp
libs/commands/source/: CMakeLists.txt  CommandCreator.cpp  CommandsUtils.cpp  QueueContainer.cpp
libs/commands/ut/: CMakeLists.txt  testCommandCreator.cpp  testCommandsUtils.cpp  testQueueContainer.cpp
libs/connection/: CMakeLists.txt
libs/connection/include/connection/: Client.hpp  FakeClient.hpp  FakeServer.hpp  Server.hpp  TcpClient.hpp  TcpServer.hpp
libs/connection/source/: CMakeLists.txt  FakeClient.cpp  FakeServer.cpp  TcpClient.cpp  TcpServer.cpp
libs/connection/ut/: dummyTest.cpp
libs/utils/include/utils/: Bid.hpp  Bidding.hpp  Card.hpp  CardsUtils.hpp  Dealer.hpp  Exceptions.hpp  Game.hpp  MoveCorrectnessChecker.hpp  Player.hpp  Printer.hpp  Trick.hpp
libs/utils/source/: Bid.cpp  Bidding.cpp  CMakeLists.txt  Card.cpp  CardsUtils.cpp  Dealer.cpp  Exceptions.cpp  Game.cpp  MoveCorrectnessChecker.cpp  Player.cpp  Printer.cpp  Trick.cpp
libs/utils/ut/: CMakeLists.txt  biddingTest.cpp  cardUtilsTest.cpp  cardsTest.cpp  dealerTest.cpp  moveCorrectnessCheckerTest.cpp  printerTest.cpp  trickTest.cpp
